--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "^0.74.5",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^3.35.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,7 +27,7 @@
     "@react-native/eslint-config": "0.74.87",
     "@react-native/metro-config": "0.74.87",
     "@react-native/typescript-config": "0.74.87",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.12",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
