--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/react-native": "^1.1.6",
+    "@aws-amplify/ui-react-native": "^2.2.16",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "aws-amplify": "^6.8.0",
+    "aws-amplify-react-native": "^7.0.8",
     "react": "18.2.0",
     "react-native": "^0.74.5",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0"
   },
